manifests/external-dns/netpol-external-dns.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-dns
  namespace: external-dns
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-dns
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "7979"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
    - toFQDNs:
        - matchName: "api.cloudflare.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
